--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -136,5 +136,5 @@ Finalmente, los valores comerciales de resistores que se eligieron se muestran e
 
 	\subsection{Estabilización}
 
-	El grupo de resistencias y capacitores marcado en el diagrama \ref{fig.esquema}, cumple la función de estabilizar la tensión de alimentación del comparador ante alteraciones en los valores de la fuente de $\pm \SI{30}{\volt}$. La tensión de \SI{12}{\volt} se tomará de la fuente de \SI{30}{\volt} mediante una fuente conmutada, por lo que no nececitaría estabilización.
+	El grupo de resistencias y capacitores marcado en el diagrama \ref{fig.esquema}, cumple la función de estabilizar la tensión de alimentación del comparador ante alteraciones en los valores de la fuente de $\SI{30}{\volt}$. La tensión de \SI{12}{\volt} se tomará de la fuente de \SI{30}{\volt} mediante una fuente conmutada, por lo que no nececitaría estabilización.
 
