--- a/Informe/Secciones/IV3_placa.tex
+++ b/Informe/Secciones/IV3_placa.tex
@@ -1,3 +1,5 @@
-Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya descriptos, se procedió al diseñó el circuito impreso mediante \textit{Orcad}. El primer paso es asignarle a cada componente su corrospondiente \textit{footprint}, los cuales deben ser elegidos cuidadosamente y verificados por la hoja de datos. El diseño del circuito impreso se muestra en la figura %\ref{fig.ruteo} 
+Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya descriptos, se procedió al diseñó el circuito impreso mediante \textit{Orcad}. El primer paso es asignarle a cada componente su corrospondiente \textit{footprint}, los cuales deben ser elegidos cuidadosamente y verificados por la hoja de datos. El diseño del circuito impreso se muestra en las figuras \ref{fig.top} y \ref{fig.bottom}. 
 
-%\HgraficarEPS{0.5}{ruteo}{Diseño de PCB}{fig.ruteo}
+
+\HgraficarPNG{0.5}{top_color}{Diseño de PCB}{fig.pcb_top}
+\HgraficarPNG{0.5}{bottom_color}{Diseño de PCB}{fig.pcb_bottom}
