--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -96,6 +96,9 @@
 		\section{Criterios de Ruteo}\label{sec:ruteo}
 			\input{IV2_ruteo.tex}
 
+		\section{Circuito Impreso}
+			\input{IV3_placa.tex}
+
 	\part{Análisis por simulación}\label{part:sim}
 		
 		\section{Polarización}\label{sec:sim_pol}
