--- a/Informe/Secciones/IV1_componentes.tex
+++ b/Informe/Secciones/IV1_componentes.tex
@@ -1,6 +1,6 @@
 En la tabla \ref{tab.componentes} se detallan todos los componentes necesarios para la implementación del circuito, teniendo en cuenta los valores comerciales disponibles.
 
-\begin{table}
+\begin{table}[H]
 	\begin{tabular}{ccccc}
 		\toprule
 		 & Código & Nombre & Características & Cantidad \\
