--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -87,7 +87,7 @@
 %		\pagebreak	
 %		\section{Disipadores}\label{sec:disipadores}
 %			\input{I10_disipadores.tex}
-
+	\pagebreak
 	\part{Diseño del circuito impreso - \emph{PCB}}\label{part:pcb}
 
 		\section{Elección de componentes}\label{sec:componentes}
@@ -98,7 +98,7 @@
 
 		\section{Circuito Impreso}
 			\input{IV3_placa.tex}
-
+	\pagebreak
 	\part{Análisis por simulación}\label{part:sim}
 		
 		\section{Polarización}\label{sec:sim_pol}
@@ -139,9 +139,10 @@
 
 		\section{Cálculo de Disipadores}\label{sec:sim_disipadores}
 			\input{V12_disipadores.tex}
+	\pagebreak
 		\section{Resultados}
 			\input{VIII1_resultados.tex}
-	\pagebreak
+%	\pagebreak
 
 %	\part{Construcción del prototipo}\label{part:construccion}
 %		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
