--- a/Informe/Secciones/IV3_placa.tex
+++ b/Informe/Secciones/IV3_placa.tex
@@ -1,5 +1,18 @@
 Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya descriptos, se procedió al diseñó el circuito impreso mediante \textit{Orcad}. El primer paso es asignarle a cada componente su corrospondiente \textit{footprint}, los cuales deben ser elegidos cuidadosamente y verificados por la hoja de datos. El diseño del circuito impreso se muestra en las figuras \ref{fig.top} y \ref{fig.bottom}. 
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.4]{top_color.pdf}
+	\caption{Diseño de PCB.}
+	\label{fig.pcb_top}
+\end{figure}
 
-\HgraficarPNG{0.5}{top_color}{Diseño de PCB}{fig.pcb_top}
-\HgraficarPNG{0.5}{bottom_color}{Diseño de PCB}{fig.pcb_bottom}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.4]{bottom_color.pdf}
+	\caption{Diseño de PCB.}
+	\label{fig.pcb_bottom}
+\end{figure}
+
+%\HgraficarPNG{0.5}{top_color}{Diseño de PCB}{fig.pcb_top}
+%\HgraficarPNG{0.5}{bottom_color}{Diseño de PCB}{fig.pcb_bottom}
