--- a/Informe/Secciones/II1_alternativas.tex
+++ b/Informe/Secciones/II1_alternativas.tex
@@ -1,6 +1,21 @@
--Comparadores: utilización de operacionales en vez del par diferencial discreto. Componentes difíciles de conseguir
+- Comparadores: utilización de operacionales en vez del par diferencial discreto. Componentes difíciles de conseguir
 
 - Separación de VAS con corriente de polarizacion de etapa de salida (separada por un capacitor)
 
 - Multiplicador de VBE doble.
 
+
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{*{4}{c}}
+		\toprule
+		Etapa                                  & Alternativa & Ventajas & Desventajas \\ 
+		\midrule
+		\multirow{2}{*}{Comparador de entrada} &             &          &             \\ %\cmidrule(l){2-4} 
+&\cellcolor[HTML]{FFFE65} Par diferencial             &          &             \\
+		\midrule
+		\multirow{2}{*}{VAS} &             &          &             \\ %\cmidrule(l){2-4} 
+		                                       &             &          &             \\
+		\bottomrule
+	\end{tabular}
+\end{table}
