--- a/Informe/Secciones/II2_bloques.tex
+++ b/Informe/Secciones/II2_bloques.tex
@@ -1,9 +1,9 @@
 \HgraficarEPS{0.5}{bloques}{Diagrama en bloques}{fig.bloques}
 
-En la figura se muestra un esquema convencional en bloques de un aumplificador de audio, que consiste en tres etapas, cada una de ellas con cierta funcionalidad.
+	En la Figura \ref{fig.bloques} se muestran los bloques principales de un amplificador de audio, que consiste en tres etapas, cada una de ellas con cierta funcionalidad.
 
 \begin{itemize}
-	\item \textbf{Comparador:} es un amplificador de transconductancia. su entrada es una tensión diferencial y su salida una corriente.
+	\item \textbf{Comparador:} es un amplificador de transconductancia. Su entrada es una tensión diferencial y su salida una corriente.
 	\item \textbf{Amplificación de tensión (VAS):} amplificador de transimpedancia (la entrada es corriente y la salida tensión).
-	\item \textbf{Separador:} (\textit{buffer}) es un adaptador de impedancias con ganancia de tensión unitaria y de corriente elevada. Entrega la potencia a la carga.
+	\item \textbf{Separador (\textit{Buffer}):} es un adaptador de impedancias con ganancia de tensión unitaria y de corriente elevada. Entrega la potencia a la carga.
 \end{itemize}
