--- a/Informe/Secciones/IV2_ruteo.tex
+++ b/Informe/Secciones/IV2_ruteo.tex
@@ -1,8 +1,8 @@
 \begin{itemize}
-	\item Las fuentes de alimentación se se colocaron lo más cerca posible de la etapa de salida, ya ésta es la que maś corriente consume.
-	\item Sabiendo que la corriente máxima que puede circular por la salida es de \SI{3.5}{\ampere}, una pista de 75 mills resulta sufifiente para las pistas de potencia.
+	\item Las fuentes de alimentación se colocaron lo más cerca posible de la etapa de salida, ya que ésta es la que maś corriente consume.
+	\item Sabiendo que la corriente máxima que puede circular por la salida es de \SI{3.5}{\ampere}, una pista de 75 mills resulta suficiente para las pistas de potencia.
 	\item Pistas de baja potencia de 40 mills.
-	\item El camino entre la salida y realimentación se colocó lo más cerca posible, lo mismo entre el el comparador y la salida, debido a que se reuiere velocidad. 
+	\item El camino entre la salida y la realimentación se colocó lo más cerca posible, lo mismo entre el el comparador y la salida, debido a que se requiere velocidad. 
 	\item No se dejaron espacios vacíos, sino que se dejaron con cobre y conectados a tierra para así obtener islas de masa.
 	\item Los transistores de entrada se colocaron lo más cercanos posible para obtener un buen acoplamiento térmico.
 	\item Se verificó que no se formen espiras, ya que se comportarían como inductancias.
