--- a/Informe/Secciones/IV3_placa.tex
+++ b/Informe/Secciones/IV3_placa.tex
@@ -1,4 +1,4 @@
-Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya descriptos, se procedió al diseñó el circuito impreso mediante \textit{Orcad}. El primer paso es asignarle a cada componente su corrospondiente \textit{footprint}, los cuales deben ser elegidos cuidadosamente y verificados por la hoja de datos. El diseño del circuito impreso se muestra en las figuras \ref{fig.top} y \ref{fig.bottom}. 
+Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya descriptos, se procedió al diseñó el circuito impreso mediante \textit{Orcad}. El primer paso es asignarle a cada componente su correspondiente \textit{footprint}, los cuales deben ser elegidos cuidadosamente y verificados por la hoja de datos. El diseño del circuito impreso se muestra en las Figuras \ref{fig.pcb_top} y \ref{fig.pcb_bottom}. 
 
 \begin{figure}[H]
 	\centering
