--- a/Informe/Secciones/V0_polarizacion.tex
+++ b/Informe/Secciones/V0_polarizacion.tex
@@ -2,11 +2,11 @@ Con el fin de corroborar y ajustar los resultados teóricos obtenidos, se realiz
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.5]{sim_polarizacion.pdf}
+	\includegraphics[width=\textwidth, trim = 2cm 4cm 4cm 2cm]{sim_polarizacion.pdf}
 	\caption{Tensiones y corrientes de reposo.}
 	\label{fig:sim_pol}
 \end{figure}
 
 
-En la figura \ref{fig:sim_pol} se muestran las tensiones y corrientes en continua, siendo congruentes con los valores esperados.
+En la Figura \ref{fig:sim_pol} se muestran las tensiones y corrientes en continua, siendo coherentes con los valores esperados.
 
