--- a/Informe/Secciones/V11_max_eficiencia.tex
+++ b/Informe/Secciones/V11_max_eficiencia.tex
@@ -10,6 +10,6 @@ Siendo $ \hat{V}_o$ máxima tensión de salida sin que haya recorte.
 
 \HgraficarPNG{0.5}{potencia}{Potencia disipada en la carga y transistores de salida.}{fig.potencia}
 
-En la figura \ref{fig.potencia} se muestra la potencia disipada en la carga, siendo la máxima (sin distorsión) \SI{86}{\watt}, la curva rosa corresponde al transistor externo $Q_{62}$, $P_{max} = \SI{18}{\watt}$. La curva azul, la potencia disipada en el transistor interno de salida $Q_{63}$.
+En la Figura \ref{fig.potencia} se muestra la potencia disipada en la carga, siendo la máxima (sin distorsión) \SI{86}{\watt}, la curva rosa corresponde al transistor externo $Q_{62}$, $P_{max} = \SI{18}{\watt}$. La curva azul, la potencia disipada en el transistor interno de salida $Q_{63}$.
 
 
