--- a/Informe/Secciones/V3_zo.tex
+++ b/Informe/Secciones/V3_zo.tex
@@ -1,3 +1,3 @@
 \HgraficarPNG{0.5}{sim_rout.png}{Impedancia de salida en función de la frecuencia.}{fig.sim_ro}
 
-Para realizar la simulación de la impedancia de salida, se pasivó la señal de entrada y se colocó una fuente alterna de prueba en el nodo de salida junto con una resistencia de prueba de \SI{0.1}{\ohm} y un capacitor de \SI{10}{\micro\farad} en serie. Mediante un análisis \texttt{AC} se midió la tensión de salida y la corriente en la resistencia de prueba, y al realizar la división se obtiene la impedancia buscada. El resultado obtenido se muestra en la figura \ref{fig.sim_ro}. Se puede observar que para frecuencias bajas y medias, hasta aproximadamente \SI{10}{\kilo\hertz}, la resistencia de salida es muy pequeña, del orden de los \SI{}{\milli\ohm}. Luego, a partir de \SI{10}{\kilo\hertz} comienza a incrementarse siendo el valor máximo \SI{6.5}{\ohm}.
+Para realizar la simulación de la impedancia de salida, se pasivó la señal de entrada y se colocó una fuente alterna de prueba en el nodo de salida junto con una resistencia de prueba de \SI{0.1}{\ohm} y un capacitor de \SI{10}{\micro\farad} en serie. Mediante un análisis \texttt{AC} se midió la tensión de salida y la corriente en la resistencia de prueba, y al realizar la división se obtiene la impedancia buscada. El resultado obtenido se muestra en la Figura \ref{fig.sim_ro}. Se puede observar que para frecuencias bajas y medias, hasta aproximadamente \SI{10}{\kilo\hertz}, la resistencia de salida es muy pequeña, del orden de los \SI{}{\milli\ohm}. Luego, a partir de \SI{10}{\kilo\hertz} comienza a incrementarse siendo el valor máximo \SI{6.5}{\ohm}.
