--- a/Informe/Secciones/V5_bw.tex
+++ b/Informe/Secciones/V5_bw.tex
@@ -7,7 +7,7 @@
 
 \HgraficarPNG{0.5}{sim_rta_max_potencia.png}{Ancho de banda de potencia}{fig:sim_bw}
 
-El ancho de banda de potencia indica la máxima frecuencia para la cuál el amplificador logra reproducir una señal sinusoidal a máxima potencia. Para este caso, la máxima tensión sin distorsión apreciable es aproximadamente \SI{26}{\volt}. A partir de la figura \ref{fig:sim_bw} se obtiene
+El ancho de banda de potencia indica la máxima frecuencia para la cuál el amplificador logra reproducir una señal sinusoidal a máxima potencia. Para este caso, la máxima tensión sin distorsión apreciable es aproximadamente \SI{26}{\volt}. A partir de la Figura \ref{fig:sim_bw} se obtiene
 
 \begin{align}
 	\centering
