--- a/Informe/Secciones/V7_fase.tex
+++ b/Informe/Secciones/V7_fase.tex
@@ -1,6 +1,6 @@
 \HgraficarPNG{0.5}{sim_bode_lazo_cerrado}{Diagrama de Bode.}{fig.bode_lazo_cerrado}
 
-En la figura \ref{fig.bode_lazo_cerrado} se presentan la magnitud y fase en la salida en función de la frecuencia.
-El margen de fase se define como el ángulo que le falta a \SI{-180}{\degree} para llegar a la fase cuando la ganancia es \SI{0}{\decibel}. Para determinar su valor, se busca en la figura \ref{fig.bode_lazo_cerrado} el punto de cruce de la gráfica de magnitud con \SI{0}{\decibel}, que corresponde a una frecuencia de aproximadamente \SI{2}{\mega\hertz}.  La fase en dicha frecuencia es de \SI{-136}{\degree}, por lo que el margen de fase resulta:
+En la Figura \ref{fig.bode_lazo_cerrado} se presentan la magnitud y fase en la salida en función de la frecuencia.
+El margen de fase se define como el ángulo que le falta a \SI{-180}{\degree} para llegar a la fase cuando la ganancia es \SI{0}{\decibel}. Para determinar su valor, se busca en la Figura \ref{fig.bode_lazo_cerrado} el punto de cruce de la gráfica de magnitud con \SI{0}{\decibel}, que corresponde a una frecuencia de aproximadamente \SI{2}{\mega\hertz}.  La fase en dicha frecuencia es de \SI{-135}{\degree}, por lo que el margen de fase resulta:
 
-	$$ \mathrm{MF} = \SI{-180}{\degree} + \SI{136}{\degree} = \boxed{\SI{-44}{\degree}} $$
+	$$ \mathrm{MF} = \SI{-180}{\degree} + \SI{135}{\degree} = \boxed{\SI{-45}{\degree}} $$
