--- a/Informe/Secciones/VIII1_resultados.tex
+++ b/Informe/Secciones/VIII1_resultados.tex
@@ -4,16 +4,16 @@
 		\toprule
 		& Especificaciones & Simulaciones \\
 		\midrule
-		 THD a Prms \SI{39}{\watt} \SI{1}{\kilo\hertz}& $< 0,02\%$ &  0,018\% \\
-		 THD a \SI{1}{\watt}, \SI{1}{\kilo\hertz} & $< 0,01\%$ & 0,005\% \\
-		 Respuesta en frecuencia & \SI{20}{\hertz} a \SI{20}{\kilo\hertz} & \SI{14}{\hertz} a \SI{156}{\kilo\hertz} \\
-		 Tensión de \textit{offset} & \SI{5}{\milli\volt} & \SI{2.5}{\milli\volt} \\
-		 \textit{Slew Rate} & \SI{10}{\volt\per\micro\second} &  \SI{9}{\volt\per\micro\second} \\
-		 IMD & 1\% & 1,4\% \\
-		 Margen de Fase & \SI{45}{\degree} &  \SI{44}{\degree} \\
-		 Factor de amortiguamiento & $>500$ & 3333 \\
-		 Impedancia de entrada & \SI{100}{\kilo\hertz} & \SI{94}{\kilo\hertz} \\
-		 Impedancia de salida & \SI{}{\milli\ohm} & \SI{2.4}{\milli\ohm}\\
+		THD a $P_{\textit{RMS}} = \SI{40}{\watt}$ @ \SI{1}{\kilo\hertz}& $< \num{0.02}\%$ &  0,018\% \\
+		THD a \SI{1}{\watt} @ \SI{1}{\kilo\hertz} & $< \num{0.01}\%$ & 0,005\% \\
+		Respuesta en frecuencia & \SI{20}{\hertz} a \SI{20}{\kilo\hertz} & \SI{14}{\hertz} a \SI{156}{\kilo\hertz} \\
+		Tensión de \textit{offset} & \SI{5}{\milli\volt} & \SI{2.5}{\milli\volt} \\
+		\textit{Slew Rate} & \SI{10}{\volt\per\micro\second} &  \SI{9}{\volt\per\micro\second} \\
+		IMD & 1\% & 1,4\% \\
+		Margen de Fase & \SI{45}{\degree} &  \SI{45}{\degree} \\
+		Factor de amortiguamiento & $>500$ & 3333 \\
+		Impedancia de entrada & \SI{100}{\kilo\ohm} & \SI{94}{\kilo\ohm} \\
+		Impedancia de salida & \SI{}{\milli\ohm} & \SI{2.4}{\milli\ohm}\\
 		\bottomrule
 	\end{tabular}
 	\caption{Resultados.}
