--- a/Informe/Secciones/VIII_conclusiones.tex
+++ b/Informe/Secciones/VIII_conclusiones.tex
@@ -7,7 +7,7 @@
 %La utilización de un par complementario (\textit{Sziklai}) en vez de un \textit{Darlington} reduce notablemente la distorsión armónica. Pero en el cirucito \textit{Turner 730}, uno de los transistores de etapa de salida es \textit{Darlington}. Esta elección de diseño puede deberse a que en los años 70 los transistores \textit{NPN} y \textit{PNP} no presentaban tanta simetría como hoy en día.
 
 
-	En el presente informe se logró diseñar un amplificador de audio calse G alternativa, obteniéndose resultados por simulación congruentes con las especificaciones definidas. La comparación se resume en la tabla \ref{tab.resultados}. La tensión máxima posible sin distorsión logró llegar a \SI{26.1}{\volt} por simulación, esto produce una potencia sobre la carga de \SI{42.25}{\watt}, por lo que se tiene cierta tolerancia con respecto a la potencia nominal especificada.
+	En el presente informe se logró diseñar un amplificador de audio calse G alternativa, obteniéndose resultados por simulación similares a las especificaciones definidas. La comparación se resume en la Tabla \ref{tab.resultados}. La tensión máxima posible sin distorsión logró llegar a \SI{26.1}{\volt} por simulación, esto produce una potencia sobre la carga de \SI{42.25}{\watt}, por lo que se tiene cierta tolerancia con respecto a la potencia nominal especificada.
 
 
 
