--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -32,23 +32,23 @@
 
 	\part{Introducción}\label{part:intro}
 
-	%	\section{Objetivos}\label{sec:obj}
-		%	\input{I1_objetivos.tex}
+		\section{Objetivos}\label{sec:obj}
+			\input{I1_objetivos.tex}
 
 		\section{Requerimientos}\label{sec:req}
 			\input{I2_requerimientos.tex}
 
 	\part{Diseño conceptual}\label{part:concept}
-%
+
 %		\section{Alternativas de diseño}\label{sec:alt}
 %			\input{II1_alternativas.tex}
-%
+
 		\section{Diagrama en bloques}\label{sec:bloques}
 			\input{II2_bloques.tex}
 %
 %		\section{Funcionamiento general}\label{sec:func_gral} % Acá se explican los bloques
 %			\input{II3_func_gral.tex}
-	\pagebreak
+
 	\part{Diseño y análisis teórico}\label{part:teo}
 		\input{III0_diseno_teo.tex}	% Acá se introduce al cto propuesto y después se analiza
 
