--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -1,6 +1,6 @@
 	La etapa de salida clase G se caracteriza principalmente por el manejo eficiente de potencia debido a que conmuta la tensión de alimentación entre dos niveles según lo requiera la señal de entrada.
 
-	En la figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada Clase G alternativa.  Los transistores $Q_1$ y $Q_2$ conforman la etapa interior que opera en clase B, siendo $Q3$ y $Q4$ los \textit{drivers} y $R1$ la resistencia de emisor compartida. 
+	En la Figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada clase G alternativa.  Los transistores $Q_1$ y $Q_2$ conforman la etapa interior que opera en clase B, siendo $Q_3$ y $Q_4$ los \textit{drivers} y $R_1$ la resistencia de emisor compartida. 
 
 	\begin{figure}[H]
 		\centering
@@ -9,23 +9,23 @@
 		\label{fig.salida}
 	\end{figure}
 
-	Los comparadores se encuentran conectados a la señal de entrada y a una tensión umbral Vth como referencia. Cuando la señal de entrada excede la tensión $+Vth$, el comparador (superior) hace que los transistores $Q5$ y $Q6$ se polaricen en saturación. Es decir que actúan como una llave que activa la alimentación $VccH$. A su vez el diodo $D1$ quedará polarizado en inversa ya que la tensión en el cátodo es $+VccH$, mayor que la tensión de ánodo $VccL$. Por lo tanto, el circuito queda alimentado solo mediante $+VccH$ y la potencia es manejada por dos transistores $Q6$ y $Q1$.
+	Los comparadores se encuentran conectados a la señal de entrada y a una tensión umbral $V_{th}$ de referencia. Cuando la señal de entrada excede la tensión $+V_{th}$, el comparador (superior) hace que los transistores $Q_5$ y $Q_6$ se polaricen en saturación. Es decir que actúan como una llave que activa la alimentación $V_{cc_H}$. A su vez el diodo $D_1$ quedará polarizado en inversa ya que la tensión en el cátodo es $+V_{cc_H}$, mayor que la tensión de ánodo $V_{cc_L}$. Por lo tanto, el circuito queda alimentado solo mediante $+V_{cc_H}$ y la potencia es manejada por dos transistores $Q_6$ y $Q_1$.
 
-	De forma análoga funcionan el comparador $C2$, $Q7$, $Q8$ y $D2$ para el semicilo negativo de la señal de entrada. La salida se ilustra en la figura \ref{fig.teo_salida}.
+	De forma análoga funcionan el comparador inferior, $Q_7$, $Q_8$ y $D_2$ para el semiciclo negativo de la señal de entrada. La salida se ilustra en la Figura \ref{fig.teo_salida}.
 
-	Sin embargo, la topología propuesta presenta un inconveniente. Cuando $Q_6$ entra en conducción, se produce una alteración repentina en la tensión $V_{CE}$ del transistor de potencia de salida $Q_1$, que por efecto Early también modifica la corriente de colector. Esta alteración afecta la ganancia, produciendo picos de tensión en la señal de salida. Esta alinealidad se elimina al conectar los transistores internos $Q3$ y $Q4$ a la tensión $+V_{ccH}$ y $-V_{ccH}$ respectivamente, según indica la figura \ref{fig.salida_2}.
 
+	\HgraficarEPS{0.5}{salidaB}{Forma de la señal de salida, y tensiones umbrales}{fig.teo_salida}
 	\begin{figure}[H]
 		\centering
 		\scalebox{0.5}{\input{salida_2}}
-		\caption{Etapa de salida.}
+		\caption{Topología final de la etapa de salida.}
 		\label{fig.salida_2}
 	\end{figure}
+	Sin embargo, la topología propuesta en la Figura \ref{fig.salida} presenta un inconveniente. Cuando $Q_6$ entra en conducción, se produce una alteración repentina en la tensión $V_{CE}$ del transistor de potencia de salida $Q_1$, que por efecto Early también modifica la corriente de colector. Esta alteración afecta la ganancia, produciendo picos de tensión en la señal de salida. Esta alinealidad se elimina al conectar los transistores internos $Q_3$ y $Q_4$ a la tensión $+V_{cc_H}$ y $-V_{cc_H}$ respectivamente, según indica la Figura \ref{fig.salida_2}.
 
-	\HgraficarEPS{0.5}{salidaB}{Forma de la señal de salida, y tensiones umbrales}{fig.teo_salida}
 \subsection{Multiplicador de $V_{BE}$}
 
-	Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_1$ y $Q_2$ con el fin de atenuar la distorsión de cruce por cero. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_1$ y $Q_2$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la figura \ref{fig.multiplicador}
+	Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_1$ y $Q_2$ con el fin de atenuar la distorsión de cruce por cero. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_1$ y $Q_2$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la Figura \ref{fig.multiplicador}.
 
 	\begin{figure}[H]
 		\centering
@@ -49,11 +49,11 @@
 
 	Se eligen los resistores comerciales $R_{1M} = \SI{3.3}{\kilo\ohm}$, $R_{2M} = \SI{680}{\ohm}$ y un potenciómetro de $\SI{1}{\kilo\ohm}$. 
 
-	La resistencia $R_{3M}$ se anexa para mejorar la independencia de la tensión $V_{BE}$ con la corriente de polarización. Asimismo se agrega un capacitor $C_M$ para no alterar el comportamiento del resto cirucito en señal, es decir que se obtiene una impedancia pequeña para un amplio rango de frecuencias. 
+	La resistencia $R_{3M}$ se anexa para mejorar la independencia de la tensión $V_{CE}$ con la corriente de polarización. Asimismo se agrega un capacitor $C_M$ para no alterar el comportamiento del resto cirucito en señal, es decir que se obtiene una impedancia pequeña para un amplio rango de frecuencias. 
 
 
 \subsection{Fuente de corriente}
-	El valor mínimo de la corriente necesaria para la etapa de salida se determina con el caso de máxima corriente de salida $I_{o,max} = \SI{26}{\volt}/ \SI{8}{\ohm} = \SI{3.25}{\ampere}$. Al tratarse de transistores de potencia, el factor $\beta$ es aproximadamente $\beta = 30$, por lo que la corriente de base en $Q1$ sería $I_{B,Q1} \approx \SI{110}{\milli\ampere}$. Dicha corriente es entregada por $Q_2$, siendo la corriente de base $I_{B,Q2} \approx \SI{110}{\milli\ampere}/50 \approx \SI{2}{\milli\ampere}$. A su vez la fuente polariza la etapa amplificadora de tensión (VAS), por lo que se considerará al menos el doble de dicha corriente. Se propone $I_{pol} = \SI{5}{\milli\ampere}$.
+	El valor mínimo de la corriente necesaria para la etapa de salida se determina con el caso de máxima corriente de salida $I_{o,\max} = \SI{26}{\volt}/ \SI{8}{\ohm} = \SI{3.25}{\ampere}$. Al tratarse de transistores de potencia, el factor $\beta$ es aproximadamente $\beta = 30$, por lo que la corriente de base en $Q_1$ sería $I_{B,Q1} \approx \SI{110}{\milli\ampere}$. Dicha corriente es entregada por $Q_2$, siendo la corriente de base $I_{B,Q2} \approx \SI{110}{\milli\ampere}/50 \approx \SI{2}{\milli\ampere}$. A su vez la fuente polariza la etapa amplificadora de tensión (VAS), por lo que se considerará al menos el doble de dicha corriente. Se propone $I_{pol} = \SI{5}{\milli\ampere}$.
 
 	\begin{figure}[H]
 		\centering
@@ -68,12 +68,12 @@
 	\label{ec.ipol}
 \end{equation}
 
-La corriente de polaización queda determinada por la resistencia $R_1$ de la expresión \ref{ec.ipol}. Considerando un $V_{BE,on} = \SI{0.5}{\volt}$ se obtiene $R_1 = \SI{100}{\ohm}$. Por otra parte se despreció la caída de tensión por $R_2$. Dicha resistencia se anexa con el fin de limitar la corriente de base que pasa de un transistor a otro.
+La corriente de polarización queda determinada por la resistencia $R_1$ de la expresión \ref{ec.ipol}. Considerando un $V_{BE,on} = \SI{0.5}{\volt}$ se obtiene $R_1 = \SI{100}{\ohm}$. Por otra parte se despreció la caída de tensión por $R_2$. Dicha resistencia se anexa con el fin de limitar la corriente de base que pasa de un transistor a otro.
 
 
 \subsection{Comparadores}
 
-	Las señales de música poseen picos mucho mayores que el promedio, estando la mayor parte del tiempo en niveles bajos, por lo que se propone un umbral de tensión de 40\% con respecto a la tensión máxima de alimentación, es decir que $V_{ccL} = \pm \SI{12}{\volt}$, $VccH = \pm \SI{30}{\volt}$. 
+	Las señales de música poseen picos de tensión cuya magnitud es mucho a la media, estando la mayor parte del tiempo en niveles bajos, por lo que se propone un umbral de tensión de 40\% con respecto a la tensión máxima de alimentación, es decir que $V_{cc_L} = \pm \SI{12}{\volt}$, $V_{cc_H} = \pm \SI{30}{\volt}$. 
 
 	\begin{figure}[H]
 		\centering
@@ -82,8 +82,8 @@ La corriente de polaización queda determinada por la resistencia $R_1$ de la ex
 		\label{fig.comparador}
 	\end{figure}
 
-	Se propone la configuración de par diferencial de la figura \ref{fig.comparador} para implementar los comparadores. Se utiliza una fuente de corriente espejo para lograr mayor estabilidad. En vez de comparar con la señal proveniente de la etapa VAS, se compara con la señal de salida $V_{o}$ para evitar cargar la VAS con la resistencia de entrada que presenta el par diferencial ($2\cdot r_\pi$). La señal de salida no resulta alterada por tratarse de un colector común que es separador de impedancias.
-	Por otra parte, es difícil lograr en la práctica que los transistores que conforman el par diferencial manejen una excursión de tensión de hasta \SI{30}{\volt}, por lo que se utiliza un divisor resistivo en ambas bases de los transistores para atenuar la amplitud de tensión. Es conveniente que la tensión de referencia $Vth'$ sea levemente menor que la prevista con el fin de contrarrestar el retardo de tiempo del comparador.
+	Se propone la configuración de par diferencial de la Figura \ref{fig.comparador} para implementar los comparadores. Se utiliza una fuente de corriente espejo para lograr mayor estabilidad. En vez de comparar con la señal proveniente de la etapa VAS, se compara con la señal de salida $V_{o}$ para evitar cargar dicha etapa con la resistencia de entrada que presenta el par diferencial ($2\cdot r_\pi$). La señal de salida no resulta alterada por tratarse de un colector común que es separador de impedancias.
+	Por otra parte, es difícil lograr en la práctica que los transistores que conforman el par diferencial manejen una excursión de tensión de hasta \SI{30}{\volt}, por lo que se utiliza un divisor resistivo en ambas bases de los transistores para atenuar la amplitud de tensión. Es conveniente que la tensión de referencia $V_{th}'$ sea levemente menor que la prevista con el fin de contrarrestar el retardo de tiempo del comparador.
 
 \begin{equation}
 	\centering
@@ -95,22 +95,22 @@ La corriente de polaización queda determinada por la resistencia $R_1$ de la ex
 	V_o' = V_o \cdot \frac{R_2}{R_2 + R_1} \implies \SI{2}{\volt} = \SI{12}{\volt} \cdot \frac{R_2}{R_2 + R_1} \implies \boxed{R_1 = 5 \cdot R_2}
 	\end{equation}
 
-	El valor de la resistencia de emisor $R_{ec}$ se elige en función de la máxima tensión posible en $V_o$ y la corriente que circularía en reposo. Con $R_ec = \SI{500}{\ohm}$ se obtiene:
+	El valor de la resistencia de emisor $R_{ec}$ se elige en función de la máxima tensión posible en $V_o$ y la corriente que circularía en reposo. Con $R_{ec} = \SI{500}{\ohm}$ se obtiene:
 
 	\begin{equation}
 		\centering
-		I_{e,max} = \frac{ \SI{1.3}{\volt} }{ \SI{500}{\ohm} } = \SI{2.6}{\milli\ampere}
+		I_{e,\max} = \frac{ \SI{1.3}{\volt} }{ \SI{500}{\ohm} } = \SI{2.6}{\milli\ampere}
 	\end{equation}
 
 	\begin{equation}
 		I_{e,pol} = \frac{ \SI{0.8}{\volt} }{ \SI{500}{\ohm} } = \SI{1.6}{\milli\ampere} \implies \SI{1.28}{\milli\watt}
 	\end{equation}
 
-Finalmente, los valores comerciales de resistores que se eligieron se muestran en el esquema \ref{fig.comparador}.	
+Finalmente, los valores comerciales de resistores que se eligieron se muestran en la Figura \ref{fig.comparador}.	
 	
 \subsection{Compensación del embalamiento térmico}
 
-	Se logra al agregar una resistencia al emisor de cada transistor equivalente de la etapa de salida. Si la señal de entrada se encuentra en su semiciclo positivo, sólo el transistor equivalente formado por $Q_{63}$ y $Q_{14}$ conduce. Ante un aumento de la temperatura, se produce un incremento de la corriente de colector, por ende aumenta la caída de tensión en $R_{32}$, entonces necesariamente la tensión $V_{BE}$ disminuye, produciendo un decremento en la corriente de colector. De esta manera se logra estabilizar la polarización de la etapa de salida mediante realimentación negativa local. El valor de dichas resistencias ($R_{32}$ y $R_{33}$) debe ser pequeño en comparación al valor de la carga con el fin de no alterar la tensión útil de salida. Asimismo para que la realimentación sea suficiente se debe cumplir la expresión \eqref{ec.re}
+	Se logra al agregar una resistencia al emisor de cada transistor equivalente de la etapa de salida. Si la señal de entrada se encuentra en su semiciclo positivo, sólo el transistor equivalente formado por $Q_{63}$ y $Q_{14}$ conduce. Ante un aumento de la temperatura, se produce un incremento de la corriente de colector, por ende aumenta la caída de tensión en $R_{32}$, entonces necesariamente la tensión $V_{BE}$ disminuye, produciendo un decremento en la corriente de colector. De esta manera se logra estabilizar la polarización de la etapa de salida mediante realimentación negativa local. El valor de dichas resistencias ($R_{32}$ y $R_{33}$) debe ser pequeño en comparación al valor de la carga con el fin de no alterar la tensión útil de salida. Asimismo para que la realimentación sea suficiente se debe cumplir la expresión \eqref{ec.re}:
 
 \begin{equation}
 	\centering
@@ -126,7 +126,7 @@ Finalmente, los valores comerciales de resistores que se eligieron se muestran e
 	\end{equation}
 
 	\subsection{Protección}
-	Se implementó una protección contra cortocircuito de la carga de salida, conformado por los transistores Q52 y Q53. Dicho circuito sensa la corriente de salida y si supera cierto umbral, la tensión de $V_{BE}$ resulta lo suficientemente elevada como para que el transistor $Q53$ entre en conducción. De esta manera la corriente que circularía por lostransistores de salida se desvía hacia los transistores de protección.
+	Se implementó una protección contra cortocircuito de la carga de salida, conformado por los transistores $Q_{52}$ y $Q_{53}$. Dicho circuito sensa la corriente de salida y si supera cierto umbral, la tensión de $V_{BE}$ resulta lo suficientemente elevada como para que el transistor $Q_{53}$ entre en conducción. De esta manera la corriente que circularía por los transistores de salida se desvía hacia los transistores de protección.
 
 	\begin{figure}[H]
 		\centering
@@ -137,5 +137,5 @@ Finalmente, los valores comerciales de resistores que se eligieron se muestran e
 
 	\subsection{Estabilización}
 
-	El grupo de resistencias y capacitores marcado en el diagrama \ref{fig.esquema}, cumple la función de estabilizar la tensión de alimentación del comparador ante alteraciones en los valores de la fuente de $\SI{30}{\volt}$. La tensión de \SI{12}{\volt} se tomará de la fuente de \SI{30}{\volt} mediante una fuente conmutada, por lo que no nececitaría estabilización.
+	El grupo de resistencias y capacitores marcado en el diagrama \ref{fig.cto_completo}, cumple la función de estabilizar la tensión de alimentación del comparador ante alteraciones en los valores de la fuente de $\SI{30}{\volt}$. La tensión de \SI{12}{\volt} se tomará de la fuente de \SI{30}{\volt} mediante una fuente conmutada, por lo que no necesitaría estabilización.
 
