--- a/Informe/Secciones/V1_compensacion.tex
+++ b/Informe/Secciones/V1_compensacion.tex
@@ -1,4 +1,4 @@
-Para hallar el valor del capacitor de compensación (presente entre la base y colector del transistor de VAS), se impone una señal cuadrada en la entrada y se observa como resulta la salida. Se realizó una simulación al variar el valor de la capacidad desde \SI{100}{\pico\farad} (curva naranja) hasta \SI{400}{\pico\farad} (curva celeste) de a \SI{100}{\pico\farad}. El resultado se muestra en la figura \ref{fig:var_cap}
+Para hallar el valor del capacitor de compensación (presente entre la base y colector del transistor de VAS), se impone una señal cuadrada en la entrada y se observa como resulta la salida. Se realizó una simulación al variar el valor de la capacidad desde \SI{100}{\pico\farad} (curva naranja) hasta \SI{400}{\pico\farad} (curva celeste) de a \SI{100}{\pico\farad}. El resultado se muestra en la Figura \ref{fig:var_cap}.
 
 
 \HgraficarPNG{0.5}{sim_var_cap_compensacion.png}{Variación de la capacitancia de compensación.}{fig:var_cap}
