--- a/Informe/Secciones/V6_escalon.tex
+++ b/Informe/Secciones/V6_escalon.tex
@@ -33,7 +33,7 @@
 %	\label{fig:rta_escalon_peque}
 %\end{figure}
 
-	Observando la figura \ref{fig:sim_bw} el tiempo de crecimiento ($\tau_r$), se puede determinar el ancho de banda mediante la ecuación \eqref{ec:bw}.
+	Observando la Figura \ref{fig:sim_bw} el tiempo de crecimiento ($\tau_r$), se puede determinar el ancho de banda mediante la ecuación \eqref{ec:bw}.
 
 	\begin{equation}
 		\centering
@@ -52,7 +52,7 @@
 %	\label{fig:sim_rta_escalon_gran_sr}
 %\end{figure}
 
-	El parámetro \textit{Slew Rate} caracteriza el comportamiento de la salida del cirucito ante cambios súbitos de tensión en la entrada, ya que la tensión de salida no puede responder de forma instantánea ante alteraciones en la entrada. Para hallar su valor se impone un escalón en la entrada de gran amplitud y se mide la pendiente casi constante resultante. A partir de la figura \ref{fig:sim_rta_escalon_gran_sr} se obtiene \eqref{ec:sr}.
+	El parámetro \textit{Slew Rate} caracteriza el comportamiento de la salida del cirucito ante cambios súbitos de tensión en la entrada, ya que la tensión de salida no puede responder de forma instantánea ante alteraciones en la entrada. Para hallar su valor se impone un escalón en la entrada de gran amplitud y se mide la pendiente casi constante resultante. A partir de la Figura \ref{fig:sim_rta_escalon_gran_sr} se obtiene \eqref{ec:sr}.
 
 	\begin{equation}
 	\centering
@@ -69,7 +69,7 @@ A partir del parámetro obtenido se puede calcular la máxima frecuencia para la
 	\label{ec.max_f}
 \end{equation}
 
-Se realizó una simulación con una señal de entrada de $1 \hat{V}$ a frecuencia $\SI{55}{\kilo\hertz}$, la salida obtenida se muestra en la figura \ref{fig.sim_55k_alta}. La distorsión resultó ser $THD = 2,6\%$, y es debida a los transistores de conmutación. 
+Se realizó una simulación con una señal de entrada de $1 \hat{V}$ a frecuencia $\SI{55}{\kilo\hertz}$, la salida obtenida se muestra en la Figura \ref{fig.sim_55k_alta}. La distorsión resultó ser $THD = 2,6\%$, y es debida a los transistores de conmutación. 
 
 \HgraficarPNG{0.5}{sim_55k_alta_26}{Simulación a máxima tensión de salida y \SI{55}{\kilo\hertz}.}{fig.sim_55k_alta}
 
@@ -78,7 +78,7 @@ Se probó con una frecuencia de \SI{25}{\kilo\hertz} a máxima tensión de salid
 \HgraficarPNG{0.5}{sim_25k_02}{Simulación a máxima tensión de salida y \SI{25}{\kilo\hertz}.}{fig.sim_25k_alta}
 
 
-Asimismo se debe destacar que la distorsión a \SI{55}{\kilo\hertz} resulta mucho menor para amplitudes de señal que no logran conmutar. Por ejemplo, el la figura \ref{fig.sim_salida_55k_baja} se muestra la simulación para una salida de $4,5\hat{V}$ y se obtuvo una distorsión de $THD=0,03\%$. Se puede apreciar el efecto del \textit{slew rate} por la forma de las puntas de la señal que empiezan a formar rectas. Dicho efecto será más pronunciado al aumentar la frecuencia.
+Asimismo se debe destacar que la distorsión a \SI{55}{\kilo\hertz} resulta mucho menor para amplitudes de señal que no logran conmutar. Por ejemplo, el la Figura \ref{fig.sim_salida_55k_baja} se muestra la simulación para una salida de $4,5\hat{V}$ y se obtuvo una distorsión de $THD=0,03\%$. Se puede apreciar el efecto del \textit{slew rate} por la forma de las puntas de la señal que empiezan a formar rectas. Dicho efecto será más pronunciado al aumentar la frecuencia.
 
 \HgraficarPNG{0.5}{sim_55k_vo_baja_03}{Saldia a \SI{55}{\kilo\hertz}.}{fig.sim_salida_55k_baja}
 
